# Tinker

./: build.gradle  gradle.properties  settings.gradle  tinker热修复步骤
ARouterAnnotationCompile/: build.gradle
ARouterAnnotationCompile/src/main/java/com/xyh/arouterannotationcompile/: AnnotationCompiler.java
Annotation/src/main/java/com/xyh/annotation/: BindPath.java
SignApk/src/main/java/com/xyh/signapk/: Sign.java
app/: Untitled  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/: output.dex
app/src/main/res/layout/: activity_main.xml
arouter/src/main/: AndroidManifest.xml
asm/: build.gradle
asm/src/main/: AndroidManifest.xml
asm_plugin/: build.gradle
callarouter/: build.gradle
callarouter/src/main/: AndroidManifest.xml
callarouter/src/main/res/layout/: activity_jump.xml  activity_main.xml
callarouter/src/main/res/values/: strings.xml
channelpacking/: build.gradle  market.txt
channelpacking/src/main/: AndroidManifest.xml
channelpacking/src/main/res/values/: strings.xml
giflib/: build.gradle  readme
giflib/src/main/: AndroidManifest.xml
giflib/src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
giflib/src/main/cpp/giflib/: gif_hash.h  gif_lib_private.h  openbsd-reallocarray.c
glide/: build.gradle
glide/src/main/: AndroidManifest.xml
livedatabus/: build.gradle
livedatabus/src/main/: AndroidManifest.xml
livedatabus/src/main/res/layout/: activity_main.xml
regionview/: build.gradle
regionview/src/main/: AndroidManifest.xml
regionview/src/main/res/layout/: activity_main.xml
(+31 files in other folders)
